--- a/src/components/video/WebRtcMeeting.module.css
+++ b/src/components/video/WebRtcMeeting.module.css
@@ -116,7 +116,8 @@
 
 .embeddedStage {
   min-width: 0;
-  flex: 1;
+  flex: 1 1 auto;
+  height: 100%;
   min-height: 0;
   display: flex;
   flex-direction: column;
@@ -131,7 +132,7 @@
 }
 
 .embeddedVideoGrid {
-  flex: 1;
+  flex: 1 1 auto;
   height: 100%;
   min-height: 0;
   display: grid;
